--- a/report/main.tex
+++ b/report/main.tex
@@ -15,6 +15,7 @@
 \usepackage{enumitem} % Includes lists
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{hyperref}
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
@@ -238,7 +239,7 @@ This continues for each dimension added, so we end up with a total of $2Nd$ maxi
     \label{fig:d2n3}
 \end{figure}
 
-I'd like to add some more notes to this solution. This is not neccesary to read, but it sheds some light on the work I did for this question and some of the mistakes I made. 
+I'd like to add some more notes to this solution. This is not neccesary to read, but it sheds some light on some of the mistakes I made. 
 
 While trying to answer this question I pretty quickly came to the answer of $2Nd$, but then later thought it to be wrong because this formula does not take into account duplicate labelings. In Figure \ref{fig:d2n3} for example the x and y decision stumps can create many duplicate label assignments. 
 
@@ -261,7 +262,7 @@ From here it seemed like there was a pattern where for any $N \leq (d+1)$ the pr
 \end{figure}
 
 
-It was not until a day of thinking and researching that I found these \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{Slides} (Page 5) that confirmed my original answer.
+It was not until a day of thinking and researching that I found these \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{\underline{Slides}}\footnote{\url{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}} (Page 5) that confirmed my original answer.
 
 \subsection{Using the bound from Exercise 3.d, determine the smallest upper-bound on the VC-dimension for decision stumps for dimensionalities $d ∈ \{1, 2, 3, 4, 5, 6, 7, 8, 1024, 2^{100}\}$}
 \label{sec:2e}
@@ -300,7 +301,7 @@ Since I could not find an analytical solution to this I decided to solve it prog
     \label{tab:upper-bound-vc}
 \end{table*}
 
-To me one interesting thing about these results is that they did not seem to agree with some other results I had found online. \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{These slides} mentions the growth should be proportional to $\log(d)$, which it is. But \href{http://courses.cms.caltech.edu/cs253/hw/hw2.pdf}{This homework assignment} gives an upper=bound on the VC dimension of $2(\log_2(d) + 1)$. I think they might have found an analytical solution to the upper-bound, but in doing so had to slightly increase it.
+To me one interesting thing about these results is that they did not seem to agree with some other results I had found online. \href{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}{\underline{These slides}}\footnote{\url{https://people.csail.mit.edu/alinush/6.867-fall-2013/2013.10.22.w8.tu-lecture-13-generalization-part-2.pdf}} mentions the growth should be proportional to $\log(d)$, which it is. But \href{http://courses.cms.caltech.edu/cs253/hw/hw2.pdf}{\underline{this homework assignment}}\footnote{\url{http://courses.cms.caltech.edu/cs253/hw/hw2.pdf}} gives an upper=bound on the VC dimension of $2(\log_2(d) + 1)$. I think they might have found an analytical solution to the upper-bound, but in doing so had to slightly increase it.
 
 \subsection{Write a program that finds lower-bounds experimentally and that would even find the true VC-dimension given enough time (and a sufficient numerical precision). Provide a clear description for (possibly in terms of pseudo code) and reasoning behind the program. (Hint: given an arbitrary data set of of size N, you can of course always check if the class of decision stumps shatters it.)}
 \label{sec:2f}
@@ -391,6 +392,8 @@ Finally Algorithm \ref{alg:shatter} was used in Algorithm \ref{alg:finder} to ch
 \end{table*}
 
 I used the method described in Section \ref{sec:2f} to experimentally find lower-bounds on the VC dimension. Results for this can be seen in Table \ref{tab:experiment-lower-bound-vc}. The boldfaced values are where the lower and upper bound match. To find these values I ran tests with the algorithm shown in Algorithm \ref{alg:finder} using 1000000 attempts each time. I varied the size per dimension from $N$ to $16N$.
+
+In my experiments I found the VC-dimension for $d=2$ to be most likely 3. I then found \href{http://www.cs.cmu.edu/~aarti/Class/10701_Spring14/slides/LearningTheoryII.pdf}{\underline{this presentation}}\footnote{\url{http://www.cs.cmu.edu/~aarti/Class/10701_Spring14/slides/LearningTheoryII.pdf}} that shows a proof that I will try to explain in my own words:
 
 \bibliographystyle{plain}
 \bibliography{refs}
