minor textual changes

--- a/report/main.tex
+++ b/report/main.tex
@@ -78,7 +78,7 @@ pdfauthor = {Frans de Boer}
 \begin{document} %All text i dokumentet hamnar mellan dessa taggar, allt ovanför är formatering av dokumentet
 \maketitle
 
-The git repository for this assignment (including code and the report) can be found at github.com. I will make this repository public after the Brightspace deadline has passed.
+The git repository for this assignment with the code and the report can be found at \url{https://github.com/Frans-db/ml2.final-assignment}. I will make this repository public after the Brightspace deadline has passed.
 
 \section{PAC Learning}
 
@@ -384,7 +384,7 @@ Finally Algorithm \ref{alg:shatter} was used in Algorithm \ref{alg:finder} to ch
     8              & 5                            \\ \hline
     9              & 5                            \\ \hline
     10              & 5                            \\ \hline
-    11             &  5                          \\ \hline
+    11             &  6                          \\ \hline
     12              &  6                           \\ \hline
     \end{tabular}
     \caption{Results for experimentally found lower bounds on the VC Dimension}
@@ -393,7 +393,7 @@ Finally Algorithm \ref{alg:shatter} was used in Algorithm \ref{alg:finder} to ch
 
 I used the method described in Section \ref{sec:2f} to experimentally find lower-bounds on the VC dimension. Results for this can be seen in Table \ref{tab:experiment-lower-bound-vc}. The boldfaced values are where the lower and upper bound match. To find these values I ran tests with the algorithm shown in Algorithm \ref{alg:finder} using 1000000 attempts each time. I varied the size per dimension from $N$ to $16N$.
 
-In my experiments I found the VC-dimension for $d=2$ to be most likely 3. I then found \href{http://www.cs.cmu.edu/~aarti/Class/10701_Spring14/slides/LearningTheoryII.pdf}{\underline{this presentation}}\footnote{\url{http://www.cs.cmu.edu/~aarti/Class/10701_Spring14/slides/LearningTheoryII.pdf}} that shows a proof that I will try to explain in my own words:
+% In my experiments I found the VC-dimension for $d=2$ to be most likely 3. I then found \href{http://www.cs.cmu.edu/~aarti/Class/10701_Spring14/slides/LearningTheoryII.pdf}{\underline{this presentation}}\footnote{\url{http://www.cs.cmu.edu/~aarti/Class/10701_Spring14/slides/LearningTheoryII.pdf}} that shows a proof that I will try to explain in my own words:
 
 \bibliographystyle{plain}
 \bibliography{refs}
