--- a/report/refs.bib
+++ b/report/refs.bib
@@ -24,3 +24,20 @@
   year = 2018
 }
 
+
+@article{decicion-stump-vc-dimension,
+  author    = {Jean{-}Samuel Leboeuf and
+               Fr{\'{e}}d{\'{e}}ric Leblanc and
+               Mario Marchand},
+  title     = {Decision trees as partitioning machines to characterize their generalization
+               properties},
+  journal   = {CoRR},
+  volume    = {abs/2010.07374},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2010.07374},
+  eprinttype = {arXiv},
+  eprint    = {2010.07374},
+  timestamp = {Tue, 20 Oct 2020 15:08:10 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2010-07374.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
