--- a/report/main.tex
+++ b/report/main.tex
@@ -258,6 +258,7 @@ Since we know the maximum number of different labelings a data set of size $N$ i
 Since I could not find an analytical solution to this I decided to solve it programmatically. The results can be seen in Table \ref{tab:upper-bound-vc}. I've also added results for $d \in \{9, 10, 11, 12\}$ for Section \ref{sec:2e}.
 
 \begin{table*}
+    \centering
     \begin{tabular}{|c|c|}
     \hline
     Dimensionality & Upper-bound on VC-Dimension \\ \hline
@@ -354,6 +355,7 @@ Finally Algorithm \ref{alg:shatter} was used in Algorithm \ref{alg:finder} to ch
 \label{sec:2g}
 
 \begin{table*}
+    \centering
     \begin{tabular}{|c|c|}
     \hline
     Dimensionality & Lower-bound on VC-Dimension \\ \hline
@@ -381,6 +383,7 @@ I used \cite{decicion-stump-vc-dimension} to find the exact VC-dimension for eac
 \[ 2d \geq {m \choose \lfloor\frac{m}{2}\rfloor} \]
 
 \begin{table*}
+    \centering
     \begin{tabular}{|c|c|}
     \hline
     Dimensionality & VC-Dimension \\ \hline
